app/assets/stylesheets/ui/thumbs/tiles/tiles.css
.tile {
  --aspect-ratio: 0.52;
  --overlay-buffer: 5px;
  --overlay-element-radius: var(--overlay-buffer);
  --thumb-height: calc(var(--thumb-width) * var(--aspect-ratio));

  position: relative;
  display: inline-block;
  vertical-align: top;

  width: 100%;
  max-width: var(--thumb-width);
  max-height: calc(var(--thumb-height) + 80px);
  min-height: var(--thumb-height);
  padding: 0;

  text-align: left;
  text-decoration: none;
  border-radius: var(--thumb-border-radius);
  color: #fff;
}

.tile img {
  position: absolute;
  object-fit: contain;
  width: 100%;
  height: 100%;
  border-radius: inherit;
  background: #000;
}

